changed the with of the open id login form from 7 to 8 em which will fix the text stuck to the field
git-svn-id: https://svn.syslab.com/svn/syslabcom/recensio.theme/trunk@6382 51ee9ba4-e84d-4896-84de-354f1821c169

--- a/recensio/theme/skins/recensio_theme/screen.css
+++ b/recensio/theme/skins/recensio_theme/screen.css
@@ -1388,7 +1388,8 @@ body.template-new-user #content input {
     margin-right:0.5em;
     padding-top:0.2em;
     text-align:right;    
-    width: 7em;
+    /******changed the width from 7 to 8 so the text would stuck to the field anymore******/
+    width: 8em;
     display: inline-block;
 }
 
